	* Fixed bug #14788: Add fallback graphics for CSS3 background gradients (Thanks to Steffen Gebert)
	* Fixed bug #14755: Step 2 - Select method should be radio choice (On behalf of Steffen Kamper)
	* Fixed bug #14752: Add Update Wizards for Skinning Changes (Thanks to Steffen Ritter)

2010-06-20  Benjamin Mack  <benni@typo3.org>

	* Followup to #13379: Sprite Icon API - Removed unneeded checks in ext_tables.php for t3skin (Thanks to Steffen Ritter)
	* Followup to #14733: Improvements to Backend skin - Exchanges "selection delete" icon to make it consistent look again (Thanks to Steffen Ritter)
	* Fixed bug #10424: Old version (3.x) screenshots in CSH (Big thanks to Philipp Gampe)
	* Followup to #14733: Improvements to Backend skin - Added styling to missing parts of the Backend

2010-06-19 Francois Suter  <francois@typo3.org>

	* Fixed bug: #14184: Scheduler: Handle invalid serialized exception objects
	* Fixed bug: #14792: Scheduler: Screenshots in the manual must be updated for new skin

2010-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14464: htmlArea RTE: Type of block accumulation if the block is manually selected in Safari

2010-06-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14593: Link wizard tabs have no style / Followup to #14733 (On behalf of Stanislas Rolland)

2010-06-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14705: In BE login form labels are to small (for German BE-Language)

2010-06-18  Benjamin Mack  <benni@typo3.org>

	* Followup to #14733: Improvements to Backend skin - Added updated styles for the taskcenter module

2010-06-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug ##14436: External links are prepended with current domain by RTE transformation
	* Updated htmlArea RTE version to 2.0.1

2010-06-18  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.2.0RC1

2010-06-18  Francois Suter  <francois@typo3.org>
