@@ -17,5 +17,5 @@ div.typo3-view-help div.c-toc ul li ul li {
 }
 
 div.typo3-view-help p.c-nav {
-	margin: 0px 10px 0 10px;
+	margin: 10px 10px 0 10px;
 }
