@@ -1,0 +1,34 @@
+/* - - - - - - - - - - - - - - - - - - - - -
+Default tables
+
+$Id: module_web_list.css 7906 2010-06-13 14:56:44Z ohader $
+- - - - - - - - - - - - - - - - - - - - - */
+
+table.t3-table {
+	background: #fff;
+	border: 1px solid #a2aab8;
+}
+
+table.t3-table .t3-row-odd td,
+table.t3-table .t3-row-odd th, {
+	background-color: #f7f7f7;
+}
+
+table.t3-table .t3-row-even td,
+table.t3-table .t3-row-even th {
+	background-color: #ffffff;
+}
+
+table.t3-table .t3-row-odd:hover td,
+table.t3-table .t3-row-odd:hover th,
+table.t3-table .t3-row-even:hover td,
+table.t3-table .t3-row-even:hover th {
+	background-color: #dedede;
+}
+
+table.t3-table tr.t3-row-header td {
+	color: #fff;
+	font-size: 10px;
+	font-weight: bold;
+	line-height: 16px;
+}
